#cmake version request
CMAKE_MINIMUM_REQUIRED(VERSION 2.8)

INCLUDE_DIRECTORIES(${PROJECT_SOURCE_DIR}/src)
INCLUDE_DIRECTORIES(${PROJECT_SOURCE_DIR}/rtmp)
INCLUDE_DIRECTORIES(${PROJECT_SOURCE_DIR}/util)
INCLUDE_DIRECTORIES(${PROJECT_SOURCE_DIR}/audio)
INCLUDE_DIRECTORIES(${PROJECT_SOURCE_DIR}/player)
include_directories(${PROJECT_SOURCE_DIR}/third_lib/faad/include)

aux_source_directory(. DIR_WORLD_SRCS)
add_library(audio STATIC ${DIR_WORLD_SRCS})
TARGET_LINK_LIBRARIES(audio faad asound)



