#cmake version request
CMAKE_MINIMUM_REQUIRED(VERSION 2.8)
#set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS}  -std=c++0x")
INCLUDE_DIRECTORIES(${PROJECT_SOURCE_DIR}/src)
INCLUDE_DIRECTORIES(${PROJECT_SOURCE_DIR}/rtmp)
INCLUDE_DIRECTORIES(${PROJECT_SOURCE_DIR}/util)
INCLUDE_DIRECTORIES(${PROJECT_SOURCE_DIR}/audio)
INCLUDE_DIRECTORIES(${PROJECT_SOURCE_DIR}/video)
INCLUDE_DIRECTORIES(${PROJECT_SOURCE_DIR}/player)

aux_source_directory(. DIR_WORLD_SRCS)
add_library(player STATIC ${DIR_WORLD_SRCS})
#TARGET_LINK_LIBRARIES(player)




